# tradingai-gsd

./: .env.example  .gitignore  AGENTS.md  README.md  docker-compose.yml  package-lock.json  package.json  tsconfig.json
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  config.json
.planning/phases/01-foundation-control-plane/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-CONTEXT.md  01-DISCUSSION-LOG.md  01-RESEARCH.md  01-REVIEW.md  01-UAT.md  01-UI-REVIEW.md  01-UI-SPEC.md  01-VALIDATION.md  01-VERIFICATION.md
.planning/phases/02-data-layer-watchlist-pipeline/: 02-01-PLAN.md  02-01-SUMMARY.md  02-02-PLAN.md  02-02-SUMMARY.md  02-CONTEXT.md  02-DISCUSSION-LOG.md  02-RESEARCH.md  02-REVIEW.md  02-SECURITY.md  02-UAT.md  02-UI-REVIEW.md  02-UI-SPEC.md  02-VALIDATION.md  02-VERIFICATION.md
.planning/quick/20260522-edit-delete-provider-profile/: PLAN.md  SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
ai-engine/: Dockerfile  README.md  pyproject.toml
ai-engine/app/: main.py  profile_store.py  rate_limiter.py  schemas.py  settings.py  tradingagents_adapter.py
src/: index.ts  server.ts
src/config/: env.ts
src/db/: client.ts  schema.sql
src/modules/data/: data.routes.ts  (+6 more)
src/ui/: app-shell.tsx
tests/: integration.test.ts  smoke.ts  ui.test.ts  verify-lq45-sync.ts
tests/data/: pipeline.integration.test.ts  universe-crud.integration.test.ts  universe.service.test.ts  watchlist-crud.integration.test.ts  watchlist.service.test.ts
tests/ui/: watchlist-ui.test.ts
(+42 files in other folders)
